2010-09-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Clean LIBS variable after tests.

2010-09-02  Colin Watson  <cjwatson@ubuntu.com>

	* INSTALL: Document that libdevmapper needs to be 1.02.34 or later.

2010-09-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Check for dm_log_with_errno_init in libdevmapper and
	echo if libdevmapper will be used.

2010-09-02  Ian Turner  <Ian.Turner@deshaw.com>

	* grub-core/fs/i386/pc/pxe.c (grub_pxefs_read): Keep the blocksize
	constant for the same file.

2010-09-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/multiboot_mmap.c: Remove leftover include.

2010-09-02  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Add *.pp, **/.dirstamp, grub-core/*.module, and
	grub-core/*.pp.

2010-09-02  Colin Watson  <cjwatson@ubuntu.com>

	Zero %ebp and %edi when entering Linux's 32-bit entry point, as
	required by the boot protocol.

	* include/grub/i386/relocator.h (struct grub_relocator32_state): Add
	ebp and edi members.
	* grub-core/lib/i386/relocator.c (grub_relocator_boot): Handle
	state.ebp and state.edi.
	* grub-core/lib/i386/relocator32.S (grub_relocator32_start): Set
	%ebp and %edi according to grub_relocator32_ebp and
	grub_relocator32_edi respectively.
	* grub-core/loader/i386/linux.c (grub_linux_boot): Zero state.ebp
	and state.edi.

2010-09-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Add i386-pc-pxe image target.

	* util/grub-mkimage.c (image_target_desc): New enum value
	IMAGE_I386_PC_PXE.
	(image_targets): New target i386-pc-pxe.
	(generate_image): Handle i386-pc-pxe image.

2010-09-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix grub_pxe_scan.

	* grub-core/fs/i386/pc/pxe.c (grub_pxe_pxenv): Put correct type bangpxe.
	(grub_pxe_scan): Fix types and pxe_rm_entry computation.
	All users updated.
	* include/grub/i386/pc/pxe.h (grub_pxe_bangpxe): New struct.
	(grub_pxe_pxenv): Correct type.

2010-09-01  Colin Watson  <cjwatson@ubuntu.com>
