@@ -836,6 +836,7 @@ grub_xnu_boot_resume (void)
   struct grub_relocator32_state state;
 
   state.esp = grub_xnu_stack;
+  state.ebp = grub_xnu_stack;
   state.eip = grub_xnu_entry_point;
   state.eax = grub_xnu_arg1;
 
@@ -1114,6 +1115,7 @@ grub_xnu_boot (void)
   state.eip = grub_xnu_entry_point;
   state.eax = grub_xnu_arg1;
   state.esp = grub_xnu_stack;
+  state.ebp = grub_xnu_stack;
   return grub_relocator32_boot (grub_xnu_relocator, state);
 }
 
